[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "twcmanager"
version = "0.1.0"
description = "Modern modular TWC manager with optional Tibber Pulse based load balancing"
requires-python = ">=3.14"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "pyserial>=3.5",
  "requests>=2.31.0",
]

[project.scripts]
twcmanager = "twcmanager.__main__:main"
